use application properties instead of custom properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 #spring.profiles.active=en
+
+guru.username=twana
+guru.password=password
+guru.dburl=www.db.url
+
+guru.jms.username=jms_twana
+guru.jms.password=jms_password
+guru.jms.dburl=www.db.url/jms
